--- a/sass/image-preview.scss
+++ b/sass/image-preview.scss
@@ -1,9 +1,33 @@
 .image-preview {
+	position:relative;
 	display:inline-block;
+	.inset {
+		position:absolute;
+		bottom:5px;
+		left:0;
+		width:100%;
+		background:white;
+		text-align:center;
+		opacity:0.7;
+	}
 	img {
 		height:200px;
 		width:200px;
 		display:inline-block;
-		padding:5px;
+	}
+	video {
+		height:200px;
+		width:200px;
+		vertical-align:middle;
+		background:#000;
+	}
+	.glyphicon {
+		position:absolute;
+		top:50%;
+		left:50%;
+		transform: translate(-50%,-50%);
+		font-size:50px;
+		opacity: .5;
+		color:white;
 	}
 }
